...
                    android:text="Create New Auction"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/popupcreateauction_create_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:backgroundTint="@color/secondary"
                    android:paddingVertical="12dp"
                    android:text="CREATE"
...
                        android:hint="Auction Title"
                        app:boxBackgroundMode="outline"
                        app:hintEnabled="true"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/popupcreateauction_auction_title_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:maxLength="100" />
                    </com.google.android.material.textfield.TextInputLayout>

...
                        android:hint="Description"
                        app:boxBackgroundMode="outline"
                        app:hintEnabled="true"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/popupcreateauction_auction_desc_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:lines="3" />
                    </com.google.android.material.textfield.TextInputLayout>

...
                        android:hint="Minimum Bid"
                        app:boxBackgroundMode="outline"
                        app:hintEnabled="true"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/popupcreateauction_auction_minbid_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

...
                            android:paddingTop="4dp"
                            app:boxBackgroundMode="outline"
                            app:hintEnabled="false"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/popupcreateauction_expiry_text"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/popupcreateauction_expiry_picker_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="6dp"
                            android:backgroundTint="@color/teal_700"
                            android:minWidth="150dp"
...
                        android:hint="Product Title"
                        app:boxBackgroundMode="outline"
                        app:hintEnabled="true"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/popupcreateauction_product_title_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:maxLength="100" />
                    </com.google.android.material.textfield.TextInputLayout>

...
                        android:hint="Product Description"
                        app:boxBackgroundMode="outline"
                        app:hintEnabled="true"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/popupcreateauction_product_desc_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:lines="3" />
                    </com.google.android.material.textfield.TextInputLayout>

...
                            android:layout_weight="3"
                            android:ems="10"
                            android:focusable="false"
                            android:text="Add Image" />

                        <ImageButton
                            android:id="@+id/popupcreateauction_image_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            app:srcCompat="@drawable/ic_plus_symbol" />

                    </LinearLayout>
...
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="6dp"
                        android:text="Add Category Tags:"
                        android:textSize="24sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/popupcreateauction_chip_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="6dp"
                        app:selectionRequired="false"
                        app:chipSpacingHorizontal="4dp">
...
