...
    <item
        android:id="@+id/navigation_home_fragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_title_home" />

    <item
        android:id="@+id/navigation_auctionlist_fragment"
        android:icon="@drawable/ic_gavel"
        android:title="@string/nav_title_auction" />

    <item
        android:id="@+id/navigation_profile_fragment"
        android:icon="@drawable/ic_user"
...
