...
                android:textAllCaps="true"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/bidding_auction_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Categories:"
                android:layout_marginTop="6dp"
                android:textSize="18sp"
                android:scrollHorizontally="true"
...
