...
                android:maxLines="1"
                android:maxLength="50"
                android:ellipsize="end"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/auction_viewholder_expiry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.35"
                android:padding="6dp"
                android:text="Exp: 2023/02/19"
...
            android:singleLine="false"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/auction_viewholder_profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="Go to public profile" />
    </LinearLayout>
...
