<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    android:contentDescription="Reporting Window"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <!-- Report Title -->
            <TextView
                android:id="@+id/report_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:padding="16dp"
                android:text="Report"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Report Form -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Report Type -->
                <TextView
                    android:id="@+id/report_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Report Type" />

                <Spinner
                    android:id="@+id/report_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />

                <!-- Report Description -->
                <TextView
                    android:id="@+id/report_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Description" />

                <EditText
                    android:id="@+id/report_description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:gravity="top|start"
                    android:hint="Please add any additional information."
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLines="10"
                    android:padding="10dp"
                    android:scrollbars="vertical"
                    android:textSize="16sp"/>

                <!-- Report Button -->
                <Button
                    android:id="@+id/report_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Report" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>